# artifact-depot

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  about.toml  call-claude  call-codex  deny.toml  dynamodb-local-metadata.json
.claude/: settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/push/: SKILL.md
.claude/skills/rebase/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt
bench/: Cargo.toml
bench/src/: client.rs  lib.rs  main.rs
bench/src/demo/: apt.rs  cargo.rs  docker.rs  golang.rs  helm.rs  mod.rs  names.rs  npm.rs  raw.rs  trickle.rs  yum.rs
bench/src/runner/: mod.rs  report.rs  scenario.rs  stats.rs  worker.rs
blob/file/: Cargo.toml
blob/file/src/: direct_io.rs  file_blob.rs  lib.rs
blob/s3/: Cargo.toml
blob/s3/src/: lib.rs
charts/depot/: .helmignore  Chart.yaml  values-aws.yaml  values-distributed.yaml  values-standalone.yaml  values.yaml
charts/depot/templates/: NOTES.txt  _helpers.tpl  _podspec.tpl  deployment.yaml  ingress.yaml  job-store-init.yaml  pvc.yaml  secret-aws.yaml  secret-config.yaml  secret-s3.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
core/: Cargo.toml
core/src/: api_helpers.rs  auth.rs  error.rs  format_state.rs  inflight.rs  lib.rs  store_registry.rs  task.rs  update.rs
core/src/repo/: cache.rs  hosted.rs  mod.rs  proxy.rs
core/src/scanner/: mod.rs  queue.rs  registry.rs
core/src/service/: artifact.rs  blob.rs  directory.rs  meta.rs  mod.rs  pagination.rs  repo.rs  scan.rs  scanner.rs  store.rs  task.rs  typed.rs  upload.rs  user.rs
core/src/store/: blob.rs  keys.rs  mod.rs  test_mock.rs
core/src/store/kv/: metadata.rs  mod.rs  records.rs  trait_def.rs
core/tests/: repo.rs  service_kv.rs  service_scanner.rs  task_kv.rs
docker/: depotd.toml
docker/aws/: .env.example  compose.yaml  depotd.toml  otel-collector.yaml  prometheus.yaml
docker/aws/dashboards/: depot-overview.json
docker/distributed/: .env  compose.yaml  depotd.toml  garage.toml  grafana-datasources.yaml
docker/standalone/: compose.yaml  depotd.toml
docker/standalone/monitoring/: grafana-dashboard-provider.yaml  loki.yaml  prometheus.yaml  tempo.yaml
docs/: Gemfile  _config.yml  architecture.md  configuration.md  index.md  observability.md  runtime-settings.md  screenshots.md  toml-reference.md  usage.md
docs/_includes/: head_custom.html
etc/: depotd-ldap.toml  depotd.init.example.toml  depotd.toml
format/apt/: Cargo.toml
format/apt/src/: api.rs  lib.rs
format/apt/src/store/: metadata.rs  mod.rs  parse.rs  signing.rs  store.rs  synthetic.rs  tests.rs
format/apt/tests/: integration.rs
format/apt/tests/common/: mod.rs
format/cargo/: Cargo.toml
format/cargo/src/: api.rs  lib.rs  store.rs
format/cargo/tests/: integration.rs
format/docker/: Cargo.toml
format/docker/src/: lib.rs  store.rs
format/docker/src/api/: blobs.rs  dispatch.rs  handlers.rs  helpers.rs  manifests.rs  mod.rs  referrers.rs  routes.rs  tags.rs  types.rs  uploads.rs
format/docker/tests/: cache_proxy.rs  integration.rs
format/golang/: Cargo.toml
format/golang/src/: api.rs  lib.rs  store.rs
format/golang/tests/: integration.rs
format/helm/: Cargo.toml
format/helm/src/: api.rs  lib.rs  store.rs
format/helm/tests/: integration.rs
format/helm/tests/common/: mod.rs
format/npm/: Cargo.toml
format/npm/src/: api.rs  lib.rs  store.rs
format/npm/tests/: integration.rs
format/npm/tests/common/: mod.rs
format/pypi/: Cargo.toml
format/pypi/src/: api.rs  lib.rs  store.rs
format/pypi/tests/: integration.rs
format/yum/: Cargo.toml
format/yum/src/: api.rs  lib.rs
format/yum/src/store/: metadata.rs  mod.rs  parse.rs  store.rs  synthetic.rs  tests.rs
format/yum/tests/: integration.rs
format/yum/tests/common/: mod.rs
kv/dynamo/: Cargo.toml
kv/dynamo/src/: lib.rs
kv/redb/: Cargo.toml
kv/redb/src/: lib.rs  redb_kv.rs  sharded_redb.rs
scanner/trivy/: Cargo.toml
scanner/trivy/src/: config.rs  lib.rs  report.rs  subprocess.rs
scripts/: coverage.sh  demo.sh  ext-test.sh  generate-notices-cargo.sh  generate-notices-npm.sh  generate-notices.sh  install-dynamodb-local.sh  ns-helpers.sh  observability-screenshots.sh  screenshots.sh  ui-test.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/server/: mod.rs
server/src/server/api/: artifacts.rs  audit.rs  auth.rs  backup.rs  conversions.rs  mod.rs  nexus_compat.rs  repositories.rs  roles.rs  scans.rs  settings.rs  stores.rs  system.rs  tasks.rs  users.rs
server/src/server/auth/: backend.rs  ldap.rs  mod.rs
server/src/server/config/: bootstrap.rs  init.rs  mod.rs  settings.rs
server/src/server/infra/: audit.rs  event_bus.rs  event_stream.rs  log_export.rs  metrics.rs  middleware.rs  mod.rs  rate_limit.rs  router.rs  sampler.rs  state.rs  store_registry.rs  task.rs  test_support.rs
server/src/server/repo/: mod.rs
server/src/server/store/: encrypted.rs  instrumented.rs  mod.rs
server/src/server/tests/: admin_apis.rs  artifacts_extended.rs  auth_rbac.rs  cleanup.rs  cors.rs  error_responses.rs  integrity_check.rs  mod.rs  nexus_compat.rs  router_coverage.rs  state_scanner.rs  system.rs
server/src/server/worker/: atime.rs  bulk_delete.rs  check.rs  cleanup.rs  cluster.rs  docker_listeners.rs  materializer.rs  mod.rs  state_scanner.rs  update.rs
server/src/server/worker/blob_reaper/: bloom.rs  docker_gc.rs  gc_loop.rs  gc_pass.rs  mod.rs  repo_cleanup.rs  tests.rs
server/src/server/worker/scanner/: mod.rs  reconciler.rs  scheduler.rs
server/tests/: initialization.rs  integration.rs  scanner_e2e.rs
test-apt-cache/: Dockerfile
test-support/: Cargo.toml
test-support/src/: lib.rs
tests/npm-docker/: Dockerfile  test.sh
tests/npm-docker/package-hello/: index.js  (+1 more)
ui/: Cargo.toml  build.rs
ui/frontend/: .nycrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.test.ts  vite.config.ts
ui/src/: lib.rs
(+74 files in other folders)
