[package]
name = "depot-bench"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "depot-bench"
path = "src/main.rs"

[lib]
name = "depot_bench"
path = "src/lib.rs"

[dependencies]
depot-format-apt = { path = "../format/apt" }
depot-format-helm = { path = "../format/helm" }
depot-format-yum = { path = "../format/yum" }
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart", "stream", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
