[package]
name = "depot-server"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

# The shipped binary is still `depot` so users don't see the crate rename
# on the command line.
[[bin]]
name = "depot"
path = "src/main.rs"

[lib]
name = "depot_server"
path = "src/lib.rs"

[dependencies]
# Depot foundation
depot-core = { path = "../core", features = ["http", "openapi", "repo", "reqwest-errors"] }
depot-blob-file = { path = "../blob/file" }
depot-blob-s3 = { path = "../blob/s3" }
depot-format-apt = { path = "../format/apt" }
depot-format-cargo = { path = "../format/cargo" }
depot-format-docker = { path = "../format/docker" }
depot-format-golang = { path = "../format/golang" }
depot-format-helm = { path = "../format/helm" }
depot-format-npm = { path = "../format/npm" }
depot-format-pypi = { path = "../format/pypi" }
depot-format-yum = { path = "../format/yum" }
depot-kv-dynamo = { path = "../kv/dynamo", optional = true }
depot-kv-redb = { path = "../kv/redb" }
depot-ui = { path = "../ui" }

# Shared
anyhow = "1"
bytes = "1"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }

# Server deps
axum = { version = "0.8", features = ["multipart"] }
http-body = "1"
http-body-util = "0.1"
blake3 = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "logs"], default-features = false }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
governor = "0.10"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
mime_guess = "2"
tempfile = "3"
jsonwebtoken = "9"
argon2 = "0.5"
ldap3 = { version = "0.11", optional = true }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Used by server repo modules (apt, yum, helm)
tar = "0.4"
flate2 = "1"
lzma-rs = "0.3"
zip = { version = "2", default-features = false, features = ["deflate-flate2", "flate2"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1"
aes-gcm = "0.10"
arc-swap = "1"
moka = { version = "0.12", features = ["sync"] }
bloomfilter = "1"
gethostname = "0.5"

[dev-dependencies]
depot-bench = { path = "../bench" }
depot-test-support = { path = "../test-support" }
# Enable test-support feature on depot-core for FailingKvStore / FailingBlobStore.
depot-core = { path = "../core", features = ["test-support"] }
rand_chacha = "0.3"
wiremock = "0.6"
http-body-util = "0.1"
tokio = { version = "1", features = ["test-util"] }
s3s = "0.13"
s3s-fs = "0.13"
hyper-util = { version = "0.1", features = ["tokio"] }

[features]
dynamodb = ["dep:depot-kv-dynamo"]
ldap = ["dep:ldap3"]
