[package]
name = "depot-test-support"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "depot_test_support"
path = "src/lib.rs"

[features]
ldap = ["depot-server/ldap"]

[dependencies]
depot-server = { path = "../server" }
depot-core = { path = "../core", features = ["test-support"] }
depot-blob-file = { path = "../blob/file" }
depot-kv-redb = { path = "../kv/redb" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
arc-swap = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
