[package]
name = "depot-blob-file"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "depot_blob_file"
path = "src/lib.rs"

[dependencies]
depot-core = { path = "../../core" }
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
libc = "0.2"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
