[package]
name = "depot-format-helm"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "depot_format_helm"
path = "src/lib.rs"

[dependencies]
depot-core = { path = "../../core", features = ["http", "repo"] }
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
blake3 = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
tar = "0.4"
flate2 = "1"

[dev-dependencies]
depot-test-support = { path = "../../test-support" }
tokio = { version = "1", features = ["full", "test-util"] }
http-body-util = "0.1"
axum = "0.8"
wiremock = "0.6"
