[package]
name = "depot-format-yum"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "depot_format_yum"
path = "src/lib.rs"

[dependencies]
depot-core = { path = "../../core", features = ["http", "repo"] }
depot-format-apt = { path = "../apt" }
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
blake3 = "1"
sha2 = "0.10"
rpm = "0.19"
flate2 = "1"

[dev-dependencies]
depot-test-support = { path = "../../test-support" }
tokio = { version = "1", features = ["full", "test-util"] }
http-body-util = "0.1"
axum = "0.8"
wiremock = "0.6"
