[package]
name = "depot-kv-dynamo"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "depot_kv_dynamo"
path = "src/lib.rs"

[dependencies]
depot-core = { path = "../../core" }
async-trait = "0.1"
aws-sdk-dynamodb = "1"
aws-config = "1"
tokio = { version = "1", features = ["time"] }
futures = "0.3"
