[package]
name = "depot-scanner-trivy"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "depot_scanner_trivy"
path = "src/lib.rs"

[dependencies]
depot-core = { path = "../../core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
